# procedure_runner

./: .gitignore  README.md  environment.yml  process.py  pyproject.toml
procedure_runner/: __init__.py  process.py
procedures/: demo.yml  mng-console-deply.yml
